# Aurora

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
compiler/: README.md
compiler/effect-solver/: Cargo.toml
compiler/effect-solver/proptest-regressions/: lib.txt
compiler/effect-solver/src/: lib.rs
compiler/prototypes/: Cargo.toml
compiler/prototypes/docs/: parser_gap_analysis.md
compiler/prototypes/examples/: actor_pipeline.aur  effect_handler.aur  effectful_trait.aur  gpu_zone.aur  patterns.aur  types_features.aur  use_groups.aur  zone_decl.aur
compiler/prototypes/src/: ast.rs  borrow.rs  const_eval.rs  constraints.rs  ctfe.rs  diagnostics.rs  driver.rs  hir.rs  incremental.rs  lexer.rs  lib.rs  macro_expander.rs  mir.rs  parser.rs  resolver.rs  solver.rs  span.rs  trait_solver.rs  types.rs  zone.rs
compiler/prototypes/src/backend/: llvm.rs
compiler/prototypes/tests/: grammar_snapshots.rs
compiler/prototypes/tests/snapshots/: grammar_snapshots__parse_actor_pipeline.snap  grammar_snapshots__parse_effect_handler.snap  grammar_snapshots__parse_effectful_trait.snap  grammar_snapshots__parse_gpu_zone.snap  grammar_snapshots__parse_patterns.snap  grammar_snapshots__parse_types_features.snap  grammar_snapshots__parse_use_groups.snap  grammar_snapshots__parse_zone_decl.snap
design/: README.md  compile-time-meta-plan.md  frontend-architecture.md  ir-lowering-plan.md  type-inference-plan.md  zone-architecture.md
design/adr/: 0001-effect-rows.md
docs/: CI.md  ROADMAP.md  TESTING.md  TODO.md  borrow-checker-design.md  research_validation.md
docs/book/: SUMMARY.md
docs/book/src/: community.md  getting_started.md  introduction.md  language_tour.md  runtime_tooling.md
docs/outreach/: blog_post_launch.md  press_kit.md  talk_outline.md
docs/reference/: CONTRIBUTING.md  api_overview.md  progress.md
docs/spec/: LRM.md  grammar.ebnf  language_reference.md
examples/: README.md
examples/gpu_image_filter/: README.md  image_filter.aur
examples/realtime_controller/: README.md  realtime_controller.aur
examples/web_server/: README.md  web_server.aur
research/: README.md  aurora_literature_links.md
research/benchmarks/: Cargo.toml  README.md
research/benchmarks/benches/: actor_throughput.rs  ffi_roundtrip.rs  gpu_executor.rs  realtime_executor.rs  timer_wheel.rs  zone_handoff.rs
research/benchmarks/results/: 2025-02-15-baseline.md  2025-09-26-autosuite.md  README.md
research/benchmarks/src/: lib.rs
research/citations/: aurora.bib
research/notes/: 2025-02-14-initial.md
research/proofs/core_calculus/: README.md
research/proofs/core_calculus/lean/: lakefile.lean
research/proofs/core_calculus/lean/lean/AuroraCalc/: Main.lean  Reduction.lean  Soundness.lean  Syntax.lean  Typing.lean
research/usability/: README.md  consent_form.md  findings.md  participant_guide.md  participant_screener.md  recruiting_plan.md  schedule.md  survey_outline.md  tasks.md
research/usability/automation/: README.md  run.sh
runtime/: README.md
runtime/ffi/: Cargo.toml
runtime/ffi/src/: capability.rs  error.rs  function.rs  lib.rs  library.rs  manager.rs  tests.rs
runtime/io/: Cargo.toml
runtime/io/src/: effects.rs  error.rs  filesystem.rs  lib.rs  network.rs  task.rs  timer.rs
runtime/memory/: Cargo.toml
runtime/memory/src/: handoff.rs  lib.rs  recycler.rs  region.rs  transfer.rs
runtime/scheduler/: Cargo.toml
runtime/scheduler/examples/: load_test.rs
runtime/scheduler/src/: lib.rs
runtime/zone_manager/: Cargo.toml
runtime/zone_manager/src/: gpu.rs  io.rs  lib.rs  realtime.rs  sandbox.rs  transfer.rs
stdlib/: README.md
stdlib/core/: Cargo.toml
stdlib/core/src/: async_io.rs  collections.rs  errors.rs  io.rs  lib.rs  math.rs  option.rs  prelude.rs  region.rs  result.rs  smart.rs  string.rs  zone.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  tests.rs
tools/: README.md  ci.sh  test-all.sh  usability-self-assess.sh
tools/auroradebug/: Cargo.toml
tools/auroradebug/src/: main.rs
tools/aurorafmt/: Cargo.toml
tools/aurorafmt/src/: main.rs
tools/auroralint/: Cargo.toml
tools/auroralint/src/: main.rs
tools/aurorals/: Cargo.toml
tools/aurorals/src/: main.rs
tools/aurorapm/: Cargo.toml
tools/aurorapm/src/: main.rs
tools/aurorarepl/: Cargo.toml
tools/aurorarepl/src/: main.rs
