[package]
name = "aurora-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Benchmark harness for Aurora runtime research validation"
license = "Apache-2.0"
publish = false

[dependencies]
aurora-runtime-scheduler = { path = "../../runtime/scheduler" }
aurora-zone-manager = { path = "../../runtime/zone_manager" }
aurora-runtime-io = { path = "../../runtime/io" }
criterion = { version = "0.5", features = ["cargo_bench_support"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["cargo_bench_support"] }

[[bench]]
name = "actor_throughput"
harness = false
