[package]
name = "aurora-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Benchmark harness for Aurora runtime research validation"
license = "Apache-2.0"
publish = false

[dependencies]
aurora-runtime-scheduler = { path = "../../runtime/scheduler" }
aurora-runtime-memory = { path = "../../runtime/memory" }
aurora-zone-manager = { path = "../../runtime/zone_manager" }
aurora-runtime-io = { path = "../../runtime/io" }
aurora-runtime-ffi = { path = "../../runtime/ffi" }
criterion = { version = "0.5", features = ["cargo_bench_support"] }
crossbeam-channel = "0.5"
libloading = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["cargo_bench_support"] }

[[bench]]
name = "actor_throughput"
harness = false

[[bench]]
name = "zone_handoff"
harness = false

[[bench]]
name = "timer_wheel"
harness = false

[[bench]]
name = "ffi_roundtrip"
harness = false
