[package]
name = "aurora-runtime-scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora-native task scheduler with structured concurrency, supervision, and zone enforcement"
license = "Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
