[package]
name = "auroradebug"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora debugger adapter prototype"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[[bin]]
name = "auroradebug"
path = "src/main.rs"
