[package]
name = "aurorafmt"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora formatter prototype"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
diffy = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "aurorafmt"
path = "src/main.rs"
