[package]
name = "auroralint"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora static analysis prototype"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "auroralint"
path = "src/main.rs"
