[package]
name = "aurorals"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora language server prototype"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]

[[bin]]
name = "aurorals"
path = "src/main.rs"
