[package]
name = "aurorarepl"
version = "0.1.0"
edition = "2021"
authors = ["Aurora Research Team"]
description = "Aurora REPL prototype"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
rustyline = "14"
regex = "1"
serde_json = "1"
dirs = "5"

[dev-dependencies]

[[bin]]
name = "aurorarepl"
path = "src/main.rs"
